<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#50F01F"
        android:gravity="center"
        android:text="@string/qlsv" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnadd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_class" />

        <Button
            android:id="@+id/btnprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_class" />

        <Button
            android:id="@+id/btnmanager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manager_student" />

    </LinearLayout>

</LinearLayout>