<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/id_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/malop"
            android:layout_marginLeft="37dp"
            android:layout_toRightOf="@+id/textView1"
            android:ems="10" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/id_class"
            android:layout_alignBottom="@+id/id_class"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="23dp"
            android:text="@string/id_class" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_class"
            android:layout_marginTop="24dp"
            android:layout_toLeftOf="@+id/id_class"
            android:text="@string/name_class" />

        <EditText
            android:id="@+id/name_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tenlop"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignLeft="@+id/id_class"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/add_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name_class"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/name_class"
            android:layout_marginTop="18dp"
            android:text="@string/add_clear" />

        <Button
            android:id="@+id/add_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/add_clear"
            android:layout_alignBottom="@+id/add_clear"
            android:layout_alignLeft="@+id/textView2"
            android:text="@string/add_save" />

    </RelativeLayout>

</LinearLayout>